# actix-sample

async_db/: Cargo.toml
async_db/src/: db.rs  main.rs
diesel_demo/: .env  Cargo.toml
diesel_demo/src/: lib.rs  models.rs
realworld/: Cargo.toml
